--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="conteudo-principal"> 
-        <h2 class="titulo-principal">Meus objetivos do ano</h2>
+        <h2 class="titulo-principal">Meus objetivos do ano_</h2>
         <div class="botoes">
             <button class="botao"> Escolher um curso da faculdade</button>
             <button class="botao"> Estudar durante todo o ano</button>
