--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="conteudo-principal"> 
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao"> Escolher um curso da faculdade</button>
+            <button class="botao ativo"> Escolher um curso da faculdade</button>
             <button class="botao"> Estudar durante todo o ano</button>
             <button class="botao"> Aproveitar meu último ano da escola</button>
             <button class="botao"> Fazer formatura</button>
