--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             <button class="botao"> Aproveitar meu último ano da escola</button>
             <button class="botao"> Fazer formatura</button>
         </div>
+        <div class= "abas-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal"> Realizar 3 cursos Alura por mês </h3>
+                <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
+            </div>
+        </div>
 
     </section>
     <script src="main.js"></script>
