--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class= "abas-textos">
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal"> Realizar 3 cursos Alura por mês </h3>
+                <h3 class="aba-conteudo-titulo-principal"> Escolher um curso da faculdade</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
         </div>
