--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
                 <h3 class="aba-conteudo-titulo-principal"> Escolher um curso da faculdade</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal"> Escolher um curso da faculdade</h3>
+                <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal"> Escolher um curso da faculdade</h3>
+                <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal"> Escolher um curso da faculdade</h3>
+                <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
+            </div>
         </div>
 
     </section>
