--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal"> Escolher um curso da faculdade</h3>
+                <h3 class="aba-conteudo-titulo-principal"> Aproveitar a Escola</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal"> Escolher um curso da faculdade</h3>
+                <h3 class="aba-conteudo-titulo-principal"> Me formar</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
         </div>
