--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal"> Ter foco durante o ano todo</h3>
+                <h3 class="aba-conteudo-titulo-principal"> Realizar e concluir meu curso pré-vestibular</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
             <div class="aba-conteudo">
