--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal"> Aproveitar a Escola</h3>
+                <h3 class="aba-conteudo-titulo-principal"> Participar de todos os trotes e me divertir no meu Último ano</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
             <div class="aba-conteudo">
