--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal"> Participar de todos os trotes e me divertir no meu Último ano</h3>
+                <h3 class="aba-conteudo-titulo-principal"> Participar de todos os trotes e me divertir no meu último ano</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal"> Me formar</h3>
+                <h3 class="aba-conteudo-titulo-principal"> Me formar junto com meus amigos</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
             </div>
         </div>
