--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
             <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal"> Decidir um curso de faculdade dentro da àrea de saúde</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal"> Realizar e concluir meu curso pré-vestibular</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal"> Participar de todos os trotes e me divertir no meu último ano</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal"> Me formar junto com meus amigos</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
+                <div class="contador"></div>
             </div>
         </div>
 
