--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <button class="botao"> Estudar durante todo o ano</button>
             <button class="botao"> Aproveitar meu último ano da escola</button>
             <button class="botao"> Fazer formatura</button>
+            <button class="botao"> Meu Aniversário</button>
         </div>
         <div class= "abas-textos">
             <div class="aba-conteudo ativo">
@@ -28,6 +29,11 @@
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal"> Participar de todos os trotes e me divertir no meu último ano</h3>
+                <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
+                <div class="contador"></div>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal"> Me formar junto com meus amigos</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
                 <div class="contador"></div>
             </div>
