--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal"> Me formar junto com meus amigos</h3>
+                <h3 class="aba-conteudo-titulo-principal"> Fazer 17 anos</h3>
                 <h4 class= "aba-conteudo-titulo-secundario" > Tempo para a realizar o objetivo </h4>
                 <div class="contador"></div>
             </div>
